--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,9 @@ doctype html
 html
   head
     title= title
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    link(href="/contrib/bootstrap/css/bootstrap.min.css", rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src="/contrib/angular.min.js", type="text/javascript")
   body
     block content
